# mc_rtde

./: README.md
etc/: mc_rtc_ur.yaml
include/mc_rtde/: DriverBridge.h  DriverBridgeRTDE.h  DriverBridgeURModernDriver.h
include/mc_rtde/grippers/: GripperInterface.h  GripperRobotiq.h
include/mc_rtde/tools/: ToolGripperRobotiq.h  ToolInterface.h
src/: CMakeLists.txt  DriverBridgeURModernDriver.cpp  URControl.cpp  URControl.h  URControlType.h
src/grippers/: GripperRobotiq.cpp
src/tools/: ToolGripperRobotiq.cpp
